--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   },
   "scripts": {
     "start:front": "react-scripts start",
-    "start": "node server.js",
+    "start": "npm run build && npm run server:prod",
     "build": "react-scripts build",
     "server:dev": "nodemon server.js",
+    "server:prod": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
