--- a/package.json
+++ b/package.json
@@ -21,10 +21,8 @@
   },
   "scripts": {
     "start:front": "react-scripts start",
-    "start": "npm run server:prod",
+    "start": "node server.js",
     "build": "react-scripts build",
-    "server:dev": "nodemon server.js",
-    "server:prod": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
